Added toggler to navbar, started base.css to enact sitewide style changes. Modified routed paths to be lowercase to better fit eventual domain name.

--- a/app/Resources/views/default/index.html.twig
+++ b/app/Resources/views/default/index.html.twig
@@ -1,6 +1,7 @@
 {% extends 'base.html.twig' %}
 
 {% block stylesheets %}
+    <link rel="stylesheet" href="{{ asset('build/base.css') }}">
     <link rel="stylesheet" href="{{ asset('build/bootstrapStyle.css') }}">
 {% endblock %}
 
