--- a/app/Resources/views/snippets/navigation.html.twig
+++ b/app/Resources/views/snippets/navigation.html.twig
@@ -3,23 +3,28 @@
 <div class="container-fluid">
     <nav class="navbar fixed-top nav-pills navbar-expand-md navbar-dark bg-secondary">
         <a class="navbar-brand" href="{{ path('homepage') }}">Hots Webapp</a>
-        <ul class="navbar-nav mr-auto">
-            <li class="nav-item">
-                <a class="nav-link {{ route == 'homepage' ? 'active' }}" href="{{ path('homepage') }}">Home</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link {{ route == 'heroes' ? 'active' }}" href="{{ path('heroes') }}">Heroes</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link {{ route == 'maps' ? 'active' }}" href="{{ path('maps') }}">Maps</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link {{ route == 'talents' ? 'active' }}" href="{{ path('talents') }}">Talents</a>
-            </li>
-        </ul>
-        <form class="form-inline my-2 my-lg-0" method="get" action="#">
-            <input class="form-control mr-sm-2" type="text" placeholder="Enter Player Name..." aria-label="Search by Player Name">
-            <button class="btn my-2 my-sm-0" type="submit">Search</button>
-        </form>
+        <div class="collapse navbar-collapse" id="navbarToggler">
+            <ul class="navbar-nav mr-auto">
+                <li class="nav-item">
+                    <a class="nav-link {{ route == 'homepage' ? 'active' }}" href="{{ path('homepage') }}">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link {{ route == 'heroes' ? 'active' }}" href="{{ path('heroes') }}">Heroes</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link {{ route == 'maps' ? 'active' }}" href="{{ path('maps') }}">Maps</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link {{ route == 'talents' ? 'active' }}" href="{{ path('talents') }}">Talents</a>
+                </li>
+            </ul>
+            <form class="form-inline my-2 my-lg-0" method="get" action="#">
+                <input class="form-control mr-sm-2" type="text" placeholder="Enter Player Name..." aria-label="Search by Player Name">
+                <button class="btn my-2 my-sm-0" type="submit">Search</button>
+            </form>
+        </div>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggler" aria-controls="navbarToggler" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
     </nav>
 </div>
