--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -1,3 +1,19 @@
-@media screen and (min-width: 768px) {
-    body { padding-top: 50px; }
+@media screen and (max-width: 767px) {
+    body { padding-top: 60px; }
+}
+@media screen and (min-width: 768px) and (max-width: 991px) {
+    body { padding-top: 74px; }
+}
+@media screen and (min-width: 992px) {
+    body { padding-top: 60px; }
+}
+
+.span,
+.left {
+    float: left;
+}
+
+.span,
+.right {
+    float: right;
 }
