Added list.js to webpack, implemented standard assets twig snippet

--- a/app/Resources/views/default/heroes.html.twig
+++ b/app/Resources/views/default/heroes.html.twig
@@ -1,9 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block stylesheets %}
-    <link rel="stylesheet" href="{{ asset('build/base.css') }}">
-    <link rel="stylesheet" href="{{ asset('build/bootstrapStyle.css') }}">
-{% endblock %}
+{% include ':snippets:stdassets.html.twig' %}
 
 {% block body %}
     <div class="container-fluid bg-info">
@@ -19,11 +16,5 @@
             </div>
         </div>
     </div>
-{% endblock %}
-
-{% block javascripts %}
-    <script src="{{ asset('build/jquery.js') }}"></script>
-    <script src="{{ asset('build/popper.js') }}"></script>
-    <script src="{{ asset('build/bootstrap.js') }}"></script>
 {% endblock %}
 
