--- a/app/Resources/views/default/index.html.twig
+++ b/app/Resources/views/default/index.html.twig
@@ -1,18 +1,9 @@
 {% extends 'base.html.twig' %}
 
-{% block stylesheets %}
-    <link rel="stylesheet" href="{{ asset('build/base.css') }}">
-    <link rel="stylesheet" href="{{ asset('build/bootstrapStyle.css') }}">
-{% endblock %}
+{% include ':snippets:stdassets.html.twig' %}
 
 {% block body %}
     <div class="container">
     </div>
-{% endblock %}
-
-{% block javascripts %}
-    <script src="{{ asset('build/jquery.js') }}"></script>
-    <script src="{{ asset('build/popper.js') }}"></script>
-    <script src="{{ asset('build/bootstrap.js') }}"></script>
 {% endblock %}
 
