--- a/app/Resources/views/snippets/stdassets.html.twig
+++ b/app/Resources/views/snippets/stdassets.html.twig
@@ -1,13 +1,12 @@
 {% block stylesheets %}
     <link rel="stylesheet" href="{{ asset('build/base.css') }}">
-    <link rel="stylesheet" href="{{ asset('build/bootstrapStyle.css') }}">
-    {{ parent('stylesheets') }}
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdn.datatables.net/v/bs4/dt-1.10.16/sc-1.4.3/datatables.min.css">
 {% endblock %}
 
 {% block javascripts %}
-    <script src="{{ asset('build/jquery.js') }}"></script>
-    <script src="{{ asset('build/popper.js') }}"></script>
-    <script src="{{ asset('build/bootstrap.js') }}"></script>
-    <script src="{{ asset('build/list.js') }}"></script>
-    {{ parent('javascripts') }}
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js"></script>
+    <script src="https://cdn.datatables.net/v/bs4/dt-1.10.16/sc-1.4.3/datatables.min.js"></script>
 {% endblock %}
