Added testing for advertising through google adsense

--- a/app/Resources/views/default/heroes.html.twig
+++ b/app/Resources/views/default/heroes.html.twig
@@ -17,10 +17,24 @@
             </div>
         </div>
         <div class="row">
+            <div class="col mx-auto">
+                <div class="text-center">
+                    {% include ':snippets:advertising/responsive.html.twig' %}
+                </div>
+            </div>
+        </div>
+        <div class="row">
             <div class="col">
                 {% embed ':snippets:heroes/statslist.html.twig' %}
                     {% block javascripts %}{% endblock %}
                 {% endembed %}
+            </div>
+        </div>
+        <div class="row">
+            <div class="col mx-auto">
+                <div class="text-center">
+                    {% include ':snippets:advertising/responsive.html.twig' %}
+                </div>
             </div>
         </div>
     </div>
