--- a/app/Resources/views/snippets/stdassets.html.twig
+++ b/app/Resources/views/snippets/stdassets.html.twig
@@ -9,4 +9,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js"></script>
     <script src="https://cdn.datatables.net/v/bs4/dt-1.10.16/sc-1.4.3/datatables.min.js"></script>
+    <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+    <script src="{{ asset('build/hotstatus.js') }}"></script>
 {% endblock %}
