Fixed etc internal name reference in herodata process. Began testing integration of database data into views, began playing around with heroes statslist js

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -8,6 +8,7 @@
         <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}" />
     </head>
     <body>
+        <script>{% block dynamicVariables %}{% endblock %}</script>
         {% include ':snippets:navigation.html.twig' %}
         {% block body %}{% endblock %}
         {% block javascripts %}{% endblock %}
