--- a/app/Resources/views/snippets/heroes/statslist.html.twig
+++ b/app/Resources/views/snippets/heroes/statslist.html.twig
@@ -2,8 +2,8 @@
     <script src="{{ asset('build/heroes-statslist.js') }}"></script>
 {% endblock %}
 
-<div id="heroes-statslist">
-    <table id="hsl-table" class="display table table-sm table-striped table-responsive table-bordered" width="100%">
+<div id="heroes-statslist" class="hotstatus-page-width">
+    <table id="hsl-table" class="display table table-sm table-striped dt-responsive">
         <thead class="thead-inverse"></thead>
     </table>
 </div>
