Implemented first action for herodata controller to handle heroes statslist ajax requests. Modified configuration to set base paths for images in the 'images' package. Added name_sort mapping for herodata process to fix the Lucio => Lcio sort name unwanted case

--- a/app/Resources/views/default/heroes.html.twig
+++ b/app/Resources/views/default/heroes.html.twig
@@ -7,8 +7,9 @@
 {# Inject dynamic content variables #}
 {% block dynamicVariables %}
     {# Inject herodata array and make available to all javascript #}
-    var herodata_imagepath = "{{ asset('images/')|raw }}";
-    var herodata_heroes = {{ herodata_heroes|json_encode|raw }};
+    {# var herodata_imagepath = "{{ asset('', 'images')|raw }}"; #}
+    {# var herodata_heroes = {{ herodata_heroes|json_encode|raw }}; #}
+    var herodata_heroes_path = "{{ path('herodata_datatable_heroes_statslist')|raw }}";
 {% endblock %}
 {% block body %}
     {# Begin HTML #}
