--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -17,6 +17,9 @@
 @media (min-width:500px) { .adslot_1 { width: 468px; height: 60px; } }
 @media (min-width:800px) { .adslot_1 { width: 728px; height: 90px; } }
 
+/* Fixes the bug of the duplicate data tables sort icon appearing on the first row of results when using bootstrap style */
+.dataTables_scrollBody thead {visibility: hidden;}
+
 .span,
 .left {
     float: left;
