Began working on toolbar for heroes statslist, further refined statslist table, added more name sort mappings to herodata process

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -6,6 +6,9 @@
         <title>{% block title %}Hots Webapp{% endblock %}</title>
         {% block stylesheets %}{% endblock %}
         <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}" />
+        <style>
+            {% block style %}{% endblock %}
+        </style>
     </head>
     <body>
         <script>{% block dynamicVariables %}{% endblock %}</script>
