--- a/app/Resources/views/snippets/heroes/statslist.html.twig
+++ b/app/Resources/views/snippets/heroes/statslist.html.twig
@@ -2,6 +2,13 @@
     <script src="{{ asset('build/heroes-statslist.js') }}"></script>
 {% endblock %}
 
+<div id="heroes-statslist-toolbar" class="hotstatus-page-width">
+    <div class="d-inline-block"><input id="heroes-statslist-toolbar-search" placeholder="Search..."></div>
+    <div class="d-inline-block">abc</div>
+    <div class="d-inline-block">def</div>
+    <div class="d-inline-block">ghi</div>
+    <div class="d-inline-block">jkl</div>
+</div>
 <div id="heroes-statslist" class="hotstatus-page-width">
     <table id="hsl-table" class="display table table-sm table-striped dt-responsive">
         <thead class="thead-inverse"></thead>
