--- a/app/Resources/views/default/heroes.html.twig
+++ b/app/Resources/views/default/heroes.html.twig
@@ -22,41 +22,38 @@
 
 {% block body %}
     {# Begin HTML #}
-    <div class="container-fluid bg-info">
-        <div class="">
-            <div class="row">
-                    <div class="col">
-                        {% include ':snippets:heroes/top_role_winrates/table.html.twig' %}
-                    </div>
-                    <div class="col">
-                        {% include ':snippets:heroes/top_role_playrates/table.html.twig' %}
-                    </div>
-                    <div class="col">
-                        {% include ':snippets:heroes/top_role_banrates/table.html.twig' %}
-                    </div>
-            </div>
+    <div class="container-fluid">
+        {# Old top-tables, but the game doesnt have good roles like league does to make these viable
+        <div class="row">
+                <div class="col">
+                    {% include ':snippets:heroes/top_role_winrates/table.html.twig' %}
+                </div>
+                <div class="col">
+                    {% include ':snippets:heroes/top_role_playrates/table.html.twig' %}
+                </div>
+                <div class="col">
+                    {% include ':snippets:heroes/top_role_banrates/table.html.twig' %}
+                </div>
         </div>
+        #}
         <div class="row">
             <div class="col">
                 <div class="text-center">
-                    {% include ':snippets:advertising/responsive.html.twig' %}
+                    {% include ':snippets:advertising/responsive_horizontal.html.twig' %}
                 </div>
             </div>
         </div>
         <div class="row">
-            <div class="col">
+            <div class="col-sm-1 col-xl-2"></div>
+            <div class="col-sm-10 col-md-10 col-xl-8">
                 <div class="text-center">
                     {% embed ':snippets:heroes/statslist.html.twig' %}
                         {% block javascripts %}{% endblock %}
                     {% endembed %}
                 </div>
             </div>
-        </div>
-        <div class="row">
-            <div class="col">
-                <div class="text-center">
-                    {% include ':snippets:advertising/responsive.html.twig' %}
-                </div>
+            <div class="col-sm-1 col-xl-2">
+                {% include ':snippets:advertising/responsive_vertical.html.twig' %}
             </div>
         </div>
     </div>
