--- a/app/Resources/views/snippets/heroes/statslist.html.twig
+++ b/app/Resources/views/snippets/heroes/statslist.html.twig
@@ -2,15 +2,29 @@
     <script src="{{ asset('build/heroes-statslist.js') }}"></script>
 {% endblock %}
 
-<div id="heroes-statslist-toolbar" class="hotstatus-page-width">
-    <div class="d-inline-block"><input id="heroes-statslist-toolbar-search" placeholder="Search..."></div>
-    <div class="d-inline-block">abc</div>
-    <div class="d-inline-block">def</div>
-    <div class="d-inline-block">ghi</div>
-    <div class="d-inline-block">jkl</div>
-</div>
-<div id="heroes-statslist" class="hotstatus-page-width">
-    <table id="hsl-table" class="display table table-sm table-striped dt-responsive">
-        <thead class="thead-inverse"></thead>
-    </table>
+<div id="heroes-statslist-container" style="border-radius: 4px !important;">
+    <div id="heroes-statslist-toolbar" class="clearfix text-left">
+        <div id="" class="d-inline-block float-right">
+            <button class="btn btn-sm d-inline float-right heroes-statslist-toolbar-subrolebutton hsl-rolebutton" value="Utility">Utility</button>
+            <button class="btn btn-sm d-inline float-right heroes-statslist-toolbar-subrolebutton hsl-rolebutton" value="Tank">Tank</button>
+            <button class="btn btn-sm d-inline float-right heroes-statslist-toolbar-subrolebutton hsl-rolebutton" value="Sustained Damage">Sustained Damage</button>
+            <button class="btn btn-sm d-inline float-right heroes-statslist-toolbar-subrolebutton hsl-rolebutton" value="Siege">Siege</button>
+            <button class="btn btn-sm d-inline float-right heroes-statslist-toolbar-subrolebutton hsl-rolebutton" value="Healer">Healer</button>
+            <button class="btn btn-sm d-inline float-right heroes-statslist-toolbar-subrolebutton hsl-rolebutton" value="Burst Damage">Burst Damage</button>
+            <button class="btn btn-sm d-inline float-right heroes-statslist-toolbar-subrolebutton hsl-rolebutton" value="Bruiser">Bruiser</button>
+            <button class="btn btn-sm d-inline float-right heroes-statslist-toolbar-subrolebutton hsl-rolebutton" value="Ambusher">Ambusher</button>
+            <button class="btn btn-sm d-inline float-right heroes-statslist-toolbar-rolebutton hsl-rolebutton" value="Warrior">Warrior</button>
+            <button class="btn btn-sm d-inline float-right heroes-statslist-toolbar-rolebutton hsl-rolebutton" value="Support">Support</button>
+            <button class="btn btn-sm d-inline float-right heroes-statslist-toolbar-rolebutton hsl-rolebutton" value="Specialist">Specialist</button>
+            <button class="btn btn-sm d-inline float-right heroes-statslist-toolbar-rolebutton hsl-rolebutton" value="Assassin">Assassin</button>
+        </div>
+        <div id="heroes-statslist-toolbar-container-search" class="d-inline-block float-none">
+            <input id="heroes-statslist-toolbar-search" class="" placeholder="Search...">
+        </div>
+    </div>
+    <div id="heroes-statslist">
+        <table id="hsl-table" class="display table table-sm table-hover table-striped dt-responsive">
+            <thead class="thead-inverse"></thead>
+        </table>
+    </div>
 </div>
