Further playing around with css, added color pallette, started to shape a theme for the statslist

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -7,6 +7,11 @@
         {% block stylesheets %}{% endblock %}
         <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}" />
         <style>
+            body {
+                background: #000008;
+                background-image: url('{{ asset('ui/bg.jpg', 'images') }}');
+                background-repeat: no-repeat;
+            }
             {% block style %}{% endblock %}
         </style>
     </head>
