--- a/app/Resources/views/snippets/heroes/statslist.html.twig
+++ b/app/Resources/views/snippets/heroes/statslist.html.twig
@@ -23,8 +23,8 @@
         </div>
     </div>
     <div id="heroes-statslist">
-        <table id="hsl-table" class="display table table-sm table-hover table-striped dt-responsive">
-            <thead class="thead-inverse"></thead>
+        <table id="hsl-table" class="display table table-sm table-hover dt-responsive">
+            <thead class=""></thead>
         </table>
     </div>
 </div>
