--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -1,3 +1,40 @@
+/* Color Palette */
+.color-primary-0 { color: #112366 }	/* Main Primary color */
+.color-primary-1 { color: #14329F }
+.color-primary-2 { color: #162C7E }
+.color-primary-3 { color: #081647 }
+.color-primary-4 { color: #050D2A }
+
+.color-secondary-1-0 { color: #2A1067 }	/* Main Secondary color (1) */
+.color-secondary-1-1 { color: #3D12A1 }
+.color-secondary-1-2 { color: #35147F }
+.color-secondary-1-3 { color: #1B0748 }
+.color-secondary-1-4 { color: #10042B }
+
+.color-secondary-2-0 { color: #084D5D }	/* Main Secondary color (2) */
+.color-secondary-2-1 { color: #057791 }
+.color-secondary-2-2 { color: #0A5F73 }
+.color-secondary-2-3 { color: #023541 }
+.color-secondary-2-4 { color: #011F26 }
+
+.color-primary-b0 { color: #1D1F26 }	/* Main Primary color */
+.color-primary-b1 { color: #484C5B }
+.color-primary-b2 { color: #343741 }
+.color-primary-b3 { color: #161923 }
+.color-primary-b4 { color: #111420 }
+
+.color-secondary-b1-0 { color: #201D26 }	/* Main Secondary color (1) */
+.color-secondary-b1-1 { color: #4F495C }
+.color-secondary-b1-2 { color: #383442 }
+.color-secondary-b1-3 { color: #1A1624 }
+.color-secondary-b1-4 { color: #151120 }
+
+.color-secondary-b2-0 { color: #1A2123 }	/* Main Secondary color (2) */
+.color-secondary-b2-1 { color: #405053 }
+.color-secondary-b2-2 { color: #2E393B }
+.color-secondary-b2-3 { color: #131E20 }
+.color-secondary-b2-4 { color: #0E1A1D }
+
 @media screen and (max-width: 767px) {
     body { padding-top: 60px; }
 }
@@ -11,10 +48,6 @@
         width: 60%;
         margin: auto;
     }
-}
-
-body {
-    background: #000000 !important;
 }
 
 .adslot_horizontal_1 { width: 234px; height: 60px; }
@@ -46,17 +79,65 @@ span.right {
     float: right;
 }
 #hsl-table {
-    border-spacing: 0;
+    border: 0 !important;
+    border-spacing: 0 !important;
+    padding: 0 !important;
+    background-color: rgba(46, 57, 59, 0.81); /* Interesting colors: rgba(53, 49, 88, 0.8), */
+}
+
+#hsl-table tr,td,thead,th {
+    padding: 4px 0px !important;
+    border: 0 !important;
+    border-spacing: 0 !important;
+    color: #FFFFFF;
+}
+
+#hsl-table td {
+    display: table-cell !important;
+    vertical-align: middle !important;
+    text-align: left;
+    padding: 4px !important;
+}
+
+.hsl-table-portrait-td {
+    text-align: center !important;
+}
+
+#hsl-table tr:first-child {
+
+}
+
+#hsl-table tr:nth-child(2n) {
+    background-color: rgba(255,255,255,0.05);
+}
+
+#hsl-table thead {
+
+}
+#hsl-table th {
+    background-color: #813da8 !important;
+    text-align: left;
+}
+
+.hsl-portrait {
+    border: 2px !important;
+    border-color: #151120 !important; /* Interesting colors: #5126c9,  */
+    border-style: solid!important;
+    width: 40px;
+    height: 40px;
 }
 
 #heroes-statslist-container {
-    background-color: #5bc0de;
+    background-color: rgba(46, 57, 59, 0.81);
+    border: 2px;
+    border-color: #1B0748;
+    border-style: solid;
 }
 
 #heroes-statslist-toolbar {
-    background-color: #6c6159;
+    background-color: #3d4b52; /* Interesting colors: #6c6159, */
     position: relative;
-    margin: 0px 16px;
+    margin: 0px 0px;
     padding: 7px 5px;
 }
 
@@ -65,24 +146,24 @@ span.right {
 }
 
 .heroes-statslist-toolbar-rolebutton {
-    background-color: #2d2d62;
-    font-size: 16px;
+    background-color: #081647;
+    font-size: 12px !important;
     margin: 2px;
     padding: 3px 7px;
     cursor: pointer;
-    border-color: #3131e6;
+    border-color: #161923;
     border-style: outset;
     border-radius: 4px;
     color: #FFFFFF;
 }
 
 .heroes-statslist-toolbar-subrolebutton {
-    background-color: #4b3da8;
-    font-size: 14px;
+    background-color: #1B0748;
+    font-size: 12px !important;
     margin: 2px;
     padding: 3px 9px;
     cursor: pointer;
-    border-color: #4c3eb5;
+    border-color: #1A1624;
     border-style: outset;
     border-radius: 4px;
     color: #FFFFFF;
