--- a/app/Resources/views/snippets/navigation.html.twig
+++ b/app/Resources/views/snippets/navigation.html.twig
@@ -1,8 +1,8 @@
 {% set route = app.request.attributes.get('_route') %}
 
 <div class="container-fluid">
-    <nav class="navbar fixed-top nav-pills navbar-expand-md navbar-dark bg-secondary">
-        <a class="navbar-brand" href="{{ path('homepage') }}">Hots Webapp</a>
+    <nav id="hotstatus-navbar" class="navbar fixed-top nav-pills navbar-expand-md navbar-dark bg-secondary">
+        <a class="navbar-brand" href="{{ path('homepage') }}"><img src="{{ asset('ui/logo.png', 'images') }}" width="140" height="45"></a>
         <div class="collapse navbar-collapse" id="navbarToggler">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item">
