--- a/app/Resources/views/default/heroes.html.twig
+++ b/app/Resources/views/default/heroes.html.twig
@@ -49,15 +49,15 @@
             </div>
         </div>
         <div class="row">
-            <div class="col-sm-1 col-xl-2"></div>
-            <div class="col-sm-10 col-md-10 col-xl-8">
+            <div class="col-md-1 col-xl-2"></div>
+            <div class="col-sm-12 col-md-10 col-xl-8">
                 <div class="text-center">
                     {% embed ':snippets:heroes/statslist.html.twig' %}
                         {% block javascripts %}{% endblock %}
                     {% endembed %}
                 </div>
             </div>
-            <div class="col-sm-1 col-xl-2">
+            <div class="col-md-1 col-xl-2">
                 {% include ':snippets:advertising/responsive_vertical.html.twig' %}
             </div>
         </div>
