Readded advertising snippets, rearranged order of columns for heroes statslist, added fontawesome sort icons and modified default sort orders on a per column basis, added further css tweaks, removed datatable row hovering due to it not playing well on nth child highlights

--- a/app/Resources/views/snippets/stdassets.html.twig
+++ b/app/Resources/views/snippets/stdassets.html.twig
@@ -1,7 +1,8 @@
 {% block stylesheets %}
-    <link rel="stylesheet" href="{{ asset('build/base.css') }}">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdn.datatables.net/v/bs4/dt-1.10.16/r-2.2.0/datatables.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="{{ asset('build/base.css') }}">
 {% endblock %}
 
 {% block javascripts %}
