Updated navigation bar style

--- a/app/Resources/views/snippets/navigation.html.twig
+++ b/app/Resources/views/snippets/navigation.html.twig
@@ -6,7 +6,7 @@
         <div class="collapse navbar-collapse" id="navbarToggler">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item">
-                    <a class="nav-link {{ route == 'homepage' ? 'active' }}" href="{{ path('homepage') }}">Home</a>
+                    <a class="nav-link {{ route == 'homepage' ? 'active' }}" href="{{ path('homepage') }}">News</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link {{ route == 'heroes' ? 'active' }}" href="{{ path('heroes') }}">Heroes</a>
