Updated color scheme for navbar player search button, added sticky footer

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -19,6 +19,7 @@
         <script>{% block dynamicVariables %}{% endblock %}</script>
         {% include ':snippets:navigation.html.twig' %}
         {% block body %}{% endblock %}
+        {% include ':snippets:footer.html.twig' %}
         {% block javascripts %}{% endblock %}
     </body>
 </html>
