--- a/app/Resources/views/snippets/navigation.html.twig
+++ b/app/Resources/views/snippets/navigation.html.twig
@@ -1,35 +1,42 @@
 {% set route = app.request.attributes.get('_route') %}
 
-<div class="container-fluid">
-    <nav id="hotstatus-navbar" class="navbar fixed-top nav-pills navbar-expand-md navbar-dark bg-secondary">
-        <a class="navbar-brand" href="{{ path('homepage') }}"><img src="{{ asset('ui/logo.png', 'images') }}" width="140" height="45"></a>
-        <div class="collapse navbar-collapse" id="navbarToggler">
-            <ul class="navbar-nav mr-auto">
-                <li class="nav-item">
-                    <a class="nav-link {{ route == 'homepage' ? 'active' }}" href="{{ path('homepage') }}">News</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link {{ route == 'heroes' ? 'active' }}" href="{{ path('heroes') }}">Heroes</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link {{ route == 'talents' ? 'active' }}" href="{{ path('talents') }}">Talents</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link {{ route == 'rankings' ? 'active' }}" href="{{ path('rankings') }}">Rankings</a>
-                </li>
-            </ul>
-            <ul class="navbar-nav">
-                <li class="nav-item">
-                    <a class="nav-link {{ route == 'upload' ? 'active' }}" style="margin-right: 32px;" href="{{ path('upload') }}">Upload Replay</a>
-                </li>
-            </ul>
-            <form class="form-inline my-2 my-lg-0" method="get" action="#">
-                <input class="form-control mr-sm-2" type="text" placeholder="Enter Player Name..." aria-label="Search by Player Name">
-                <button id="nav-player-search-btn" class="btn my-2 my-sm-0" type="submit"><i class="fa fa-search" aria-hidden="true"></i> Search</button>
-            </form>
-        </div>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggler" aria-controls="navbarToggler" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-    </nav>
-</div>
+
+<nav id="hotstatus-navbar" class="navbar nav-pills navbar-expand-md navbar-dark bg-secondary">
+    <div class="container-fluid">
+    <a class="navbar-brand" href="{{ path('homepage') }}"><img src="{{ asset('ui/logo.png', 'images') }}" width="140" height="45"></a>
+    <div class="collapse navbar-collapse" id="navbarToggler">
+        <ul class="navbar-nav mr-auto">
+            <li class="nav-item">
+                <a class="nav-link nav-stopwordwrap {{ route == 'news' ? 'active' }}" href="{{ path('news') }}">News</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link nav-stopwordwrap {{ route == 'heroes' ? 'active' }}" href="{{ path('heroes') }}">Heroes</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link nav-stopwordwrap {{ route == 'talents' ? 'active' }}" href="{{ path('talents') }}">Talents</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link nav-stopwordwrap {{ route == 'rankings' ? 'active' }}" href="{{ path('rankings') }}">Rankings</a>
+            </li>
+        </ul>
+        <ul class="navbar-nav">
+            <li class="nav-item nav-md-hideitem">
+                <a class="nav-link nav-stopwordwrap {{ route == 'contact' ? 'active' }}" href="{{ path('contact') }}">Contact</a>
+            </li>
+            <li class="nav-item nav-md-hideitem">
+                <a class="nav-link nav-stopwordwrap {{ route == 'faq' ? 'active' }}" href="{{ path('faq') }}">F.A.Q.</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link nav-stopwordwrap {{ route == 'upload' ? 'active' }}" style="margin-right: 32px;" href="{{ path('upload') }}">Upload Replay</a>
+            </li>
+        </ul>
+        <form class="form-inline my-2 my-lg-0" method="get" action="#">
+            <input class="form-control mr-sm-2" type="text" placeholder="Enter Player Name..." aria-label="Search by Player Name">
+            <button id="nav-player-search-btn" class="btn my-2 my-sm-0" type="submit"><i class="fa fa-search" aria-hidden="true"></i> Search</button>
+        </form>
+    </div>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggler" aria-controls="navbarToggler" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+    </div>
+</nav>
