--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -277,6 +277,31 @@ body {
     white-space: nowrap;
 }
 
+/* DataTable Processing Hoverup */
+.dataTables_processing{
+    position:absolute;
+    top:50% !important;
+    left:50% !important;
+    width:100% !important;
+    margin-left:-50% !important;
+    margin-top:-25px !important;
+    padding-top:20px !important;
+    text-align:center !important;
+    font-size:1.2em !important;
+    background-color: rgba(27, 7, 72, 0.3) !important;
+    color: #1B0748 !important;
+    /*background:-webkit-gradient(linear, left top, right top,
+                                color-stop(0%, rgba(255,255,255,0)),
+                                color-stop(25%, rgba(255,255,255,0.9)),
+                                color-stop(75%, rgba(255,255,255,0.9)),
+                                color-stop(100%, rgba(255,255,255,0)));
+    background:-webkit-linear-gradient(left, rgba(255,255,255,0) 0%, rgba(255,255,255,0.9) 25%, rgba(255,255,255,0.9) 75%, rgba(255,255,255,0) 100%);
+    background:-moz-linear-gradient(left, rgba(255,255,255,0) 0%, rgba(255,255,255,0.9) 25%, rgba(255,255,255,0.9) 75%, rgba(255,255,255,0) 100%);
+    background:-ms-linear-gradient(left, rgba(255,255,255,0) 0%, rgba(255,255,255,0.9) 25%, rgba(255,255,255,0.9) 75%, rgba(255,255,255,0) 100%);
+    background:-o-linear-gradient(left, rgba(255,255,255,0) 0%, rgba(255,255,255,0.9) 25%, rgba(255,255,255,0.9) 75%, rgba(255,255,255,0) 100%);
+    background:linear-gradient(to right, rgba(255,255,255,0) 0%, rgba(255,255,255,0.9) 25%, rgba(255,255,255,0.9) 75%, rgba(255,255,255,0) 100%);*/
+}
+
 /* DataTable sort icons using font awesome */
 table.dataTable thead .sorting::before {
     font-family: FontAwesome !important;
