Added fixed header to datatable, began implementing granularity selection controls above table

--- a/app/Resources/views/default/heroes.html.twig
+++ b/app/Resources/views/default/heroes.html.twig
@@ -51,6 +51,17 @@
         <div class="row">
             <div class="col-md-1 col-xl-2"></div>
             <div class="col-sm-12 col-md-10 col-xl-8">
+                <div class="">
+                    <div class="d-inline-block">[Select Range Of Maps]</div>
+                    <div class="d-inline-block">[Select Range of Leagues]</div>
+                    <div class="d-inline-block">[Select Range of Dates]</div>
+                </div>
+            </div>
+            <div class="col-md-1 col-xl-2"></div>
+        </div>
+        <div class="row">
+            <div class="col-md-1 col-xl-2"></div>
+            <div class="col-sm-12 col-md-10 col-xl-8">
                 <div class="text-center">
                     {% embed ':snippets:heroes/statslist.html.twig' %}
                         {% block javascripts %}{% endblock %}
